--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Code Concept</title>
+    <title>Code Concept - Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
@@ -19,11 +19,11 @@
 
     <!-- MAIN WRAPPER - BACKGROUND-->
     <div class="main-wrapper">
-        <header role="banner" class="nav-bg">
+        <header role="banner" class="nav-bg mb-4">
             <!-- bg-dark removed and top-fixed -->
             <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
                 <div class="container">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="/index.html">
                         <img class="logo" src="images/logo.svg" title="Code Concept logo"
                             alt="Illustration for Code Concept logo">
                     </a>
@@ -31,13 +31,14 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="text-white nav-link active txt" aria-current="page" href="#">Showroom</a>
+                                <a class="nav-link txt" href="/index.html">Showroom</a>
                             </li>
                             <li class="nav-item">
-                                <a class="text-white nav-link txt" href="/our-studio.html">Our Studio</a>
+                                <a class="nav-link txt" href="#">Our Studio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="text-white nav-link txt" href="/contact-us.html">Contact Us</a>
+                                <a class="nav-link txt active" aria-current="page" href="/contact-us.html">Contact
+                                    Us</a>
                             </li>
                         </ul>
                     </div>
@@ -60,13 +61,13 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item">
-                                    <a class="text-white active txt" aria-current="page" href="#">Showroom</a>
+                                    <a class="nav-link txt" href="/index.html">Showroom</a>
                                 </li>
-                                <li class="nav-item txt">
-                                    <a class="text-white nav-link" href="#">Our Studio</a>
+                                <li class="nav-item">
+                                    <a class="nav-link txt" href="/our-studio.html">Our Studio</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="text-white nav-link dropdown-toggle txt" href="#" role="button"
+                                    <a class="nav-link dropdown-toggle txt" href="#" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         Masterpieces
                                     </a>
@@ -77,6 +78,10 @@
                                         <li><a class="dropdown-item" href="#">UX/UI Design</a></li>
                                     </ul>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link txt active" aria-current="page" href="/contact-us.html">Contact
+                                        Us</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -84,11 +89,155 @@
             </nav>
         </header>
         <main id="main" role="main">
-          <h1>Inspire? - Contact Us</h1>
+            <section class="intro-contact text-center">
+                <div class="container">
+                    <h1 class="pt-5 mb-4 txt display-1 fw-bold">Inspire? - Contact Us!</h1>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <p>At Code Concept, we are dedicated to bringing your creative vision to life. Whether you
+                                have a question, need a consultation, or are ready to start a project, we're here to
+                                help.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- CONECT WITH US -->
+            <section class="py-5 text-center">
+                <div class="container">
+                    <h2 class="mb-3 txt">Connect with Us</h2>
+                    <p class="col-lg-12 mb-4 txt">Let's Bring Your Vision to Life</p>
+                    <p class="mb-5">Our process begins with an in-depth consultation to understand your unique needs and
+                        goals. We then collaborate closely with you to create a captivating design that tells your
+                        story. Finally, we deliver a polished product that exceeds your expectations. Ready to bring
+                        your brand's story to life? Share the details of your project with us using this form.</p>
+
+                </div>
+
+                <!-- CONTACT FORM -->
+                <div class="container mt-5 mb d-flex justify-content-center position-tape">
+                    <img class="img-fluid tape-form" src="images/tape-blue.svg"
+                        alt="Decorative ilustration with shape of a tape">
+                    <form class="bg-dark service-rounded py-5 col-xs-6 col-md-8 col-lg-8">
+                        <div class="row justify-content-center">
+                            <div class="col-10 mb-2">
+                                <label for="first-name">First Name</label>
+                                <input type="text" class="form-control" id="first-name" placeholder="First Name">
+                            </div>
+                            <div class="col-10 mb-2">
+                                <label for="last-name">Last Name</label>
+                                <input type="text" class="form-control" id="last-name" placeholder="Last Name">
+                            </div>
+                            <div class="col-10 mb-2">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Email">
+                            </div>
+                            <div class="col-10 mb-2">
+                                <label for="message">Message</label>
+                                <textarea class="form-control mb-2" id="message" rows="5"
+                                    placeholder="How we can help you?" required></textarea>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn btn-primary rounded-pill px-4 txt mt-4">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </section>
+
+            <!-- MORE WAYS TO CONNECT -->
+            <section class="mt-5 pt-5">
+                <div class="container">
+                    <h2 class="mb-3 text-center">Need more ways to connect?</h2>
+                    <p class="txt mb-5 text-center">Stay in Touch - We're Here for You</p>
+
+                    <div class="row px-5">
+                        <div class="col-lg-6">
+                            <div class="col-lg-12">
+                                <div class="col-lg-6">
+                                    <p class="fw-bold">Studio Hours:</p>
+                                    <p>Monday to Friday 9am - 4pm GMT</p>
+                                </div>
+                                <div class="col-lg-6">
+                                    <p class="fw-bold">Email:</p>
+                                    <p>contact@codeconcept.com</p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="col-lg-6">
+                                    <p class="fw-bold">Studio Hours:</p>
+                                    <p>Monday to Friday 9am - 4pm GMT</p>
+                                </div>
+                                <div class="col-lg-6">
+                                    <p class="fw-bold">Email:</p>
+                                    <p>contact@codeconcept.com</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="block-map">
+                                <!-- class to set font size -->
+                                <h3 class="img-fluid txt">Visit Us</h3>
+                                <!-- class to set width and heigth of map-->
+                                <iframe class="gmap rounded-4"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d179779.58158039677!2d-76.05537470931984!3d45.24666111461662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20-%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1711951054944!5m2!1sen!2sca"
+                                    allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- SOCIAL MEDIA -->
+            <section id="values" class="mt-5 pt-5 text-center">
+                <div class="container">
+                    <h2 class="mb-3 text-center">Follow Us</h2>
+                    <p class="txt mb-5">Stay Inspired - Follow Our Creative Journey</p>
+
+                    <div class="social-channels">
+                        <div class="row">
+                            <div
+                                class="py-5 col-12 col-md-12 col-lg-4 flex-column justify-content-center align-items-center">
+                                <a href="#" class="text-decoration-none">
+                                    <img src="images/icons-linkedin.png" class="img-fluid icon-value rounded-circle"
+                                        alt="Icon image with linkedin logo">
+                                    <p class="icon-text mt-4 ">LinkedIn</p>
+                                </a>
+                            </div>
+
+                            <div
+                                class="py-5 col-12 col-md-12 col-lg-4 d-flex flex-column justify-content-center align-items-center">
+                                <a href="#" class="text-decoration-none">
+                                    <img src="images/icons-github.png" class="img-fluid icon-value"
+                                        alt="Icon image with github logo">
+                                    <p class="icon-text mt-4 ">GitHub</p>
+                                </a>
+                            </div>
+
+                            <div
+                                class="py-5 col-12 col-md-12 d-flex col-lg-4 flex-column justify-content-center align-items-center">
+                                <a href="#" class="text-decoration-none">
+                                    <img src="images/icons-instagram.png" class="img-fluid icon-value"
+                                        alt="Icon image with instagram logo">
+                                    <p class="icon-text mt-4 ">Instagram</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
         </main>
-      </div> <!--Main wrapper-->  
+    </div> <!--Main wrapper-->
 
     <!-- Bootstrap cdn link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
