--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Code Concept</title>
+    <title>Code Concept - Showroom</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
@@ -23,7 +23,7 @@
             <!-- bg-dark removed and top-fixed -->
             <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
                 <div class="container">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="/index.html">
                         <img class="logo" src="images/logo.svg" title="Code Concept logo"
                             alt="Illustration for Code Concept logo">
                     </a>
@@ -31,13 +31,13 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="text-white nav-link active txt" aria-current="page" href="#">Showroom</a>
+                                <a class="nav-link active txt" aria-current="page" href="#">Showroom</a>
                             </li>
                             <li class="nav-item">
-                                <a class="text-white nav-link txt" href="/our-studio.html">Our Studio</a>
+                                <a class="nav-link txt" href="/our-studio.html">Our Studio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="text-white nav-link txt" href="/contact-us.html">Contact Us</a>
+                                <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -60,13 +60,13 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item">
-                                    <a class="text-white active txt" aria-current="page" href="#">Showroom</a>
+                                    <a class="nav-link active txt" aria-current="page" href="#">Showroom</a>
                                 </li>
-                                <li class="nav-item txt">
-                                    <a class="text-white nav-link" href="#">Our Studio</a>
+                                <li class="nav-item">
+                                    <a class="nav-link txt" href="/our-studio.html">Our Studio</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="text-white nav-link dropdown-toggle txt" href="#" role="button"
+                                    <a class="nav-link dropdown-toggle txt" href="#" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         Masterpieces
                                     </a>
@@ -76,6 +76,9 @@
                                         <li><a class="dropdown-item" href="#">Graphic Design</a></li>
                                         <li><a class="dropdown-item" href="#">UX/UI Design</a></li>
                                     </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -90,12 +93,12 @@
                 <div class="container hero">
                     <div class="d-flex justify-content-center align-items-center">
                         <div class="text-center">
-                            <h1 class="mb-4">Crafting your ideas into <br />
-                                <span class="text-white">
+                            <h1 class="mb-4 display-1 fw-bold">Crafting your ideas into <br />
+                                <span class="text-white display-1 fw-bold">
                                     masterpiece solutions
                                 </span>
                             </h1>
-                            <button role="button" class="btn btn-primary txt rounded-pill" type="button">Get in
+                            <button role="button" class="btn btn-primary txt rounded-pill mt-5" type="button">Get in
                                 Touch</button>
                         </div>
                     </div>
@@ -106,7 +109,7 @@
             <section id="values" class="mt-5 pt-5 text-center">
                 <div class="container">
                     <h2 class="mb-3 text-center">Transform Your Digital Presence</h2>
-                    <p class="txt mb-5">Stand out from the competition with a unique and compelling design</p>
+                    <h3 class="txt mb-5">Stand out from the competition with a unique and compelling design</h3>
 
                     <div class="bg-dark rounded-4 p-5">
                         <div class="row">
@@ -145,7 +148,7 @@
                     <img src="images/line.png" class="img-fluid mb-5" alt="ilustration of a curvy line">
 
                     <h2 class="mt-2 mb-3">Artworks Collection</h2>
-                    <p class="txt mb-5">See how Code Concept has transformed visions into reality</p>
+                    <h3 class="txt mb-5">See how Code Concept has transformed visions into reality</h3>
 
                     <div class="row mb-4">
                         <!-- Images Collection -->
@@ -193,7 +196,7 @@
                 <div class="container">
 
                     <h2 class="mt-2 mb-3">Masterpieces</h2>
-                    <p class="txt mb-5">Explore the potential of our services and let's work together </p>
+                    <h3 class="txt mb-5">Explore the potential of our services and let's work together </h3>
 
                     <div class="row">
 
@@ -270,20 +273,20 @@
                         life</p>
 
                     <div class="row mb-4 d-flex align-items-center">
-
-                        <div class="col-12 col-md-4 categories left d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
-                            <img class="feature-image position-tape" src="images/crafter.jpg"
+                        
+                        <div class="col-xs-12 col-md-4 position-tape categories left d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
+                            <img class="feature-image " src="images/crafter.jpg"
                                 alt="Image showing hands of a craftsman molding clay">
-                            <img class="img-fluid tape-crafter" src="images/tape-purple.svg"
+                            <img class="img-fluid tape-crafter" id="tape-craft" src="images/tape-blue.svg"
                                 alt="Decorative ilustration with shape of a tape">
                             <p><a href="#" class="text-reset text-decoration-none">&lt;/Crafters/&gt;</a></p>
                         </div>
-                        <div class="col-12 col-md-4 categories d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
+                        <div class="col-xs-12 col-md-4 categories d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
                             <img class="feature-image mb-4 mt-4" src="images/photographer.jpg"
                                 alt="Image showing hands of a photographer holding the camera">
                             <p><a href="#" class="text-reset text-decoration-none">&lt;/Photographers/&gt;</a></p>
                         </div>
-                        <div class="col-12 col-md-4 categories right d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
+                        <div class="col-xs-12 col-md-4 categories right d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
                             <img class="feature-image categories mb-4 mt-4" src="images/digital-artist.jpg" alt="Image of a digital artist drawing on a tablet">
                             <p><a href="#" class="text-reset text-decoration-none">&lt;/Digital Artists/&gt;</a></p>
                         </div>
