--- a/our-studio.html
+++ b/our-studio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Code Concept</title>
+  <title>Code Concept - Our Studio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="css/style.css" rel="stylesheet">
@@ -23,20 +23,20 @@
       <!-- bg-dark removed and top-fixed -->
       <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/index.html">
             <img class="logo" src="images/logo.svg" title="Code Concept logo" alt="Illustration for Code Concept logo">
           </a>
 
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="text-white nav-link txt" href="/index.html">Showroom</a>
+                <a class="nav-link txt" href="/index.html">Showroom</a>
               </li>
               <li class="nav-item">
-                <a class="text-white nav-link active txt" aria-current="page" href="#">Our Studio</a>
+                <a class="nav-link active txt" aria-current="page" href="#">Our Studio</a>
               </li>
               <li class="nav-item">
-                <a class="text-white nav-link txt" href="/contact-us.html">Contact Us</a>
+                <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -58,13 +58,13 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="text-white active txt" aria-current="page" href="#">Showroom</a>
+                  <a class="nav-link txt" href="/index.html">Showroom</a>
                 </li>
-                <li class="nav-item txt">
-                  <a class="text-white nav-link" href="#">Our Studio</a>
+                <li class="nav-item">
+                  <a class="nav-link active txt" aria-current="page" href="#">Our Studio</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="text-white nav-link dropdown-toggle txt" href="#" role="button" data-bs-toggle="dropdown"
+                  <a class="nav-link dropdown-toggle txt" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Masterpieces
                   </a>
@@ -75,6 +75,9 @@
                     <li><a class="dropdown-item" href="#">UX/UI Design</a></li>
                   </ul>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
+              </li>
               </ul>
             </div>
           </div>
@@ -85,13 +88,10 @@
     <main id="main" role="main">
       <section class="intro text-center">
         <div class="container">
-          <h1 class="pt-5 mb-4 txt">Our Studio</h1>
+          <h1 class="pt-5 mb-4 txt display-1 fw-bold">Our Studio</h1>
           <div class="row">
             <div class="col-lg-12">
-              <p>At CODE CONCEPT, Media Studio will deliver creative solutions that are clean, simple, and stunning that
-                will make your business stand out among others.Our Media Studio focuses on artistic small businesses
-                looking to establish a solid online presence that differentiates them from their competitors through
-                unique and story-driven designs.</p>
+              <p>At CODE CONCEPT, Media Studio will deliver creative solutions that are clean, simple, and stunning that will make your business stand out among others.Our Media Studio focuses on artistic small businesses looking to establish a solid online presence that differentiates them from their competitors through unique and story-driven designs.</p>
             </div>
           </div>
         </div>
@@ -172,23 +172,22 @@
 
           <div class="reviews">
             <div class="row">
-              <div class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+              <div class="py-5 col-12 col-md-12 col-lg-4 flex-column justify-content-center align-items-center">
                 <img src="images/testimonial-catherine.png" class="img-fluid icon-value rounded-circle"
                   alt="Icon image with a monitor that conains a pencil, brush and rule ilustration">
-                <p class="icon-text mt-4 ">“Code Concept transformed my photography business with a stunning portfolio
-                  site. Their attention to detail and understanding of my vision were incredible. Highly recommend!”
+                <p class="icon-text mt-4 ">“Code Concept transformed my photography business with a stunning portfolio site. Their attention to detail and understanding of my vision were incredible. Highly recommend!”
                   <br>— Catherine Mooney, Photographer
                 </p>
               </div>
 
-              <div class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+              <div class="py-5 col-12 col-md-12 col-lg-4 d-flex flex-column justify-content-center align-items-center">
                 <img src="images/testimonial-carl.png" class="img-fluid icon-value"
                   alt="Icon image with a paint palette ilustration">
                 <p class="icon-text mt-4 ">"Code Concept beautifully captured my brand and helped me reach a broader
                   audience. Melissa's creativity and expertise are unmatched!"<br> — Carl Thompson, Crafter</p>
               </div>
 
-              <div class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+              <div class="py-5 col-12 col-md-12 d-flex col-lg-4 flex-column justify-content-center align-items-center">
                 <img src="images/testimonial-damian.png" class="img-fluid icon-value"
                   alt="Icon image with a frame ilustration">
                 <p class="icon-text mt-4 ">"Code Concept brought my digital art portfolio to life with an innovative and
